# BARTERLEDGER-Peer-to-Peer-Skill-Trading-Protocol

./: .gitignore  README.md
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/reputation-ledger/: Cargo.toml
contracts/reputation-ledger/src/: lib.rs  test.rs
contracts/trade-vault/: Cargo.toml
contracts/trade-vault/src/: lib.rs  test.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Navigation.tsx  Notifications.tsx  RankBadge.tsx  StatusBadge.tsx  TradeCard.tsx
frontend/src/lib/: constants.ts  mockData.ts  soroban.ts  store.ts
frontend/src/pages/: Market.tsx  MyTrades.tsx  Profile.tsx  Propose.tsx
frontend/src/styles/: globals.css
frontend/src/test/: barterledger.test.tsx
scripts/: deploy.sh
